<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_16"
        android:layout_marginEnd="@dimen/text_margin_32"
        android:layout_marginStart="@dimen/text_margin_32"
        android:layout_marginTop="@dimen/text_margin_16"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/trash_image"
            android:layout_width="@dimen/icon_image_dialog"
            android:layout_height="@dimen/icon_image_dialog"
            android:layout_marginEnd="@dimen/text_margin_32"
            android:contentDescription="@string/cd_image"
            android:src="@drawable/trash" />

        <TextView
            android:id="@+id/limit_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/dialog_remove"
            android:textColor="@color/colorDialogText"
            android:textSize="@dimen/text_font_size_20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_32"
        android:layout_marginEnd="@dimen/text_margin_32"
        android:layout_marginStart="@dimen/text_margin_32"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/limit_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warning_delete_inf"
            android:textColor="@color/colorDialogText"
            android:textSize="@dimen/text_font_size_18" />
    </LinearLayout>

</LinearLayout>

