<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPurple"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_16_sp"
        android:layout_marginEnd="@dimen/size_32_sp"
        android:layout_marginLeft="@dimen/size_32_sp"
        android:layout_marginRight="@dimen/size_32_sp"
        android:layout_marginStart="@dimen/size_32_sp"
        android:layout_marginTop="@dimen/size_16_sp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/icon_image_dialog"
            android:layout_height="@dimen/icon_image_dialog"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/size_32_sp"
            android:layout_marginRight="@dimen/size_32_sp"
            android:contentDescription="@string/cd_image"
            android:src="@drawable/dialog_server" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/dialog_server"
            android:textColor="@color/colorStandardWhite"
            android:textSize="@dimen/size_20_sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_32_sp"
        android:layout_marginRight="@dimen/size_32_sp"
        android:text="@string/server_message"
        android:textColor="@color/colorStandardWhite"
        android:textSize="@dimen/size_16_sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_32_sp"
            android:layout_marginRight="@dimen/size_32_sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_24_sp"
                android:text="@string/server_address_edit"
                android:textColor="@color/colorStandardWhite"
                android:textSize="@dimen/size_16_sp" />

            <EditText
                android:id="@+id/server_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorBrokenWhite"
                android:inputType="textUri"
                android:maxLines="1"
                android:paddingBottom="8sp"
                android:paddingLeft="@dimen/size_16_sp"
                android:paddingRight="@dimen/size_16_sp"
                android:paddingTop="8sp"
                android:textColor="@color/colorTextGray"
                android:textSize="@dimen/size_18_sp"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_24_sp"
                android:text="@string/server_port_edit"
                android:textColor="@color/colorStandardWhite"
                android:textSize="@dimen/size_16_sp" />

            <EditText
                android:id="@+id/port_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorBrokenWhite"
                android:inputType="text"
                android:maxLines="1"
                android:paddingBottom="8sp"
                android:paddingEnd="@dimen/size_16_sp"
                android:paddingLeft="@dimen/size_16_sp"
                android:paddingRight="@dimen/size_16_sp"
                android:paddingStart="@dimen/size_16_sp"
                android:paddingTop="8sp"
                android:textColor="@color/colorTextGray"
                android:textSize="@dimen/size_18_sp"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_24_sp"
                android:text="@string/database_name_edit"
                android:textColor="@color/colorStandardWhite"
                android:textSize="@dimen/size_16_sp" />

            <EditText
                android:id="@+id/db_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorBrokenWhite"
                android:inputType="text"
                android:maxLines="1"
                android:paddingBottom="8sp"
                android:paddingEnd="@dimen/size_16_sp"
                android:paddingLeft="@dimen/size_16_sp"
                android:paddingRight="@dimen/size_16_sp"
                android:paddingStart="@dimen/size_16_sp"
                android:paddingTop="8sp"
                android:textColor="@color/colorTextGray"
                android:textSize="@dimen/size_18_sp"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/db_sync_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_24_sp"
                android:layout_marginTop="@dimen/size_32_sp"
                android:background="@color/colorLightPurple"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="8sp"
                android:paddingEnd="@dimen/size_16_sp"
                android:paddingLeft="@dimen/size_16_sp"
                android:paddingRight="@dimen/size_16_sp"
                android:paddingStart="@dimen/size_16_sp"
                android:paddingTop="8sp"
                android:stateListAnimator="@null"
                android:text="@string/sync_dialog_button"
                android:textColor="@color/colorBrokenWhite"
                android:textSize="@dimen/size_16_sp"
                tools:targetApi="lollipop" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

