<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_16"
        android:layout_marginEnd="@dimen/text_margin_32"
        android:layout_marginStart="@dimen/text_margin_32"
        android:layout_marginTop="@dimen/text_margin_16"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/limit_image"
            android:layout_width="@dimen/icon_image_dialog"
            android:layout_height="@dimen/icon_image_dialog"
            android:layout_marginEnd="@dimen/text_margin_32"
            android:layout_weight="1"
            android:contentDescription="@string/cd_image"
            android:src="@drawable/warning" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_warning"
                android:textColor="@color/colorDialogText"
                android:textSize="@dimen/text_font_size_20" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin_32"
            android:layout_marginRight="@dimen/text_margin_32"
            android:layout_marginTop="0dp"
            android:text="@string/limit_exceed"
            android:textColor="@color/colorDialogText"
            android:textSize="@dimen/text_font_size_16" />

        <TextView
            android:id="@+id/exceeded_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64sp"
            android:layout_marginLeft="@dimen/text_margin_32"
            android:layout_marginRight="@dimen/text_margin_32"
            android:layout_marginTop="@dimen/text_margin_32"
            android:gravity="center_horizontal"
            android:textColor="@color/colorDialogText"
            android:textSize="64sp" />

    </LinearLayout>

</LinearLayout>

