<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_16_sp"
        android:layout_marginEnd="@dimen/size_32_sp"
        android:layout_marginStart="@dimen/size_32_sp"
        android:layout_marginTop="@dimen/size_16_sp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/time_image"
            android:layout_width="@dimen/icon_image_dialog"
            android:layout_height="@dimen/icon_image_dialog"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/size_32_sp"
            android:contentDescription="@string/cd_image"
            android:src="@drawable/time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_time"
                android:textColor="@color/colorStandardWhite"
                android:textSize="@dimen/size_20_sp" />

            <TextView
                android:id="@+id/time_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Current: "
                android:textColor="@color/colorStandardWhite"
                android:textSize="@dimen/size_16_sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_16_sp"
        android:layout_marginLeft="@dimen/size_32_sp"
        android:layout_marginRight="@dimen/size_32_sp"
        android:layout_marginTop="0dp"
        android:text="@string/time_message"
        android:textColor="@color/colorStandardWhite"
        android:textSize="@dimen/size_18_sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_32_sp"
            android:layout_marginRight="@dimen/size_32_sp"
            android:orientation="vertical">

            <TimePicker
                android:id="@+id/picker_time_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/size_32_sp" />

            <CheckBox
                android:id="@+id/checkbox_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_16_sp"
                android:buttonTint="@color/colorBrokenWhite"
                android:clickable="true"
                android:foregroundTint="@color/colorBrokenWhite"
                android:text="TURN ON sending daily summaries"
                android:textColor="@color/colorBrokenWhite"
                android:textSize="@dimen/size_14_sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

