<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingBottom="@dimen/size_16_sp"
    android:paddingEnd="@dimen/size_8_sp"
    android:paddingLeft="@dimen/size_8_sp"
    android:paddingRight="@dimen/size_8_sp"
    android:paddingStart="@dimen/size_8_sp"
    android:paddingTop="@dimen/size_16_sp"
    tools:ignore="overdraw">

    <FrameLayout
        android:id="@+id/card_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/size_16_sp"
        android:paddingLeft="@dimen/size_16_sp"
        android:paddingRight="@dimen/size_16_sp"
        android:paddingStart="@dimen/size_16_sp" />

    <LinearLayout
        android:id="@+id/card_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_default_one"
                style="@style/CustomYellowButtonTheme"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:stateListAnimator="@null" />

            <Button
                android:id="@+id/button_default_two"
                style="@style/CustomYellowButtonTheme"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:stateListAnimator="@null" />

            <Button
                android:id="@+id/button_default_three"
                style="@style/CustomYellowButtonTheme"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:stateListAnimator="@null" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8sp"
            android:orientation="horizontal">

            <Space
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4sp"
                android:layout_marginLeft="4sp"
                android:layout_marginRight="4sp"
                android:layout_marginStart="4sp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/edittext_custom_amount"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4sp"
                android:layout_marginLeft="4sp"
                android:layout_marginRight="4sp"
                android:layout_marginStart="4sp"
                android:layout_weight="1"
                android:hint="@string/gramm"
                android:inputType="number"
                android:paddingEnd="@dimen/size_16_sp"
                android:paddingLeft="@dimen/size_16_sp"
                android:paddingRight="@dimen/size_16_sp"
                android:paddingStart="@dimen/size_16_sp"
                android:textColor="@color/colorTextGray"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_add_custom_amount"
                style="@style/CustomRedButtonTheme"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:stateListAnimator="@null"
                android:text="@string/add_button"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_details"
                style="@style/CustomGreenButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:text="@string/dialog_details"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>